# python-data-science

./: .gitignore  LICENSE  README.en.md  README.md  main.py  pyproject.toml
datasets/: label_studio实体识别数据集.csv  label_studio文本分类数据集.csv  语言建模数据集.csv
notebooks/: bge-m3-vllm.ipynb  光学字符识别.ipynb  分类.ipynb  回归.ipynb  图像分类.ipynb  大模型实体提取.ipynb  大模型文本分类.ipynb  完形填空.ipynb  实体识别.ipynb  少样本示例.ipynb  文本分类.ipynb  文本到文本生成.ipynb  文本聚类.ipynb  文本表征.ipynb  时间序列预测.ipynb  构建一个简单的 LLM 应用程序.ipynb  构建聊天机器人.ipynb  电脑网络问题.md  知识库问答.ipynb  端到端文本生成.ipynb  联网问答.ipynb  聚类.ipynb  视频分类.ipynb  语音识别.ipynb
serve/: client.py  config.py  fastapi_serve.py
