[project]
name = "python-data-science"
version = "0.1.0"
description = "b站 AI日日新 python数据科学"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "asttokens>=3.0.0",
    "autogluon-tabular[catboost,lightgbm,xgboost]>=1.3.0",
    "autogluon-timeseries>=1.3.0",
    "comm>=0.2.2",
    "datasets>=3.5.1",
    "einops>=0.8.1",
    "evaluate>=0.4.3",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "modelscope>=1.25.0",
    "pandas>=2.2.3",
    "protobuf>=6.30.2",
    "pytorchvideo>=0.1.5",
    "ray==2.44.1",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "sentencepiece>=0.2.0",
    "seqeval>=1.2.2",
    "tiktoken>=0.9.0",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "transformers==4.49.0",
]

# pytorch指定为cpu版本
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# pytorch指定为cpu版本
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
torchaudio = [
  { index = "pytorch-cpu" },
]

# 国内镜像源
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

# 国内镜像源
[[index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[dependency-groups]
dev = [
    "modelscope>=1.25.0",
]
